2003-03-23  Bradley Bell  <btb@icculus.org>

	* main/bm.c: stop extra robots from overwriting exit models

	* include/ogl_init.h: increased OGL_TEXTURE_LIST_SIZE so the
	texture list doesn't get full

	* main/bm.c: fix mem leak when reading extra robots

2003-03-21  Bradley Bell  <btb@icculus.org>

	* main/menu.c: Added option to set movie resolution (mostly works)

2003-03-21  Martin Schaffner <maschaffner@gmx.ch>

	* main/gameseq.c, main/piggy.c, main/piggy.h: move bitmap
	replacement functions to piggy.c

	* main/gameseq.c: attempt to support mac d1 descent.pig

	* main/bm.c: fix mem leak

	* main/gameseq.c: fix bug: when opening d1 level 1 with oem data
	files, both d1 and d2 oem briefing where showed

	* main/inferno.c, main/movie.c: Change the default movie
	resolution to "high", implement the option -lowresmovies

2003-03-20  Bradley Bell  <btb@icculus.org>

	* arch/sdl/rbaudio.c, main/songs.c: cd detection works now

	* main/piggy.c: comments

2003-03-20  Martin Schaffner <maschaffner@gmx.ch>

	* main/gameseq.c: delete duplicate function

	* 2d/rle.c: fix color swapping on big endian of big rle bitmaps

2003-03-19  Bradley Bell  <btb@icculus.org>

	* arch/sdl/rbaudio.c, include/rbaudio.h: starting d2 cd detection
	(cddb discid) support

	* arch/sdl/digi.c, main/kludge.c: implemented
	digi_link_sound_to_object3 for looping sounds, other looping stuff

	* arch/sdl/gr.c: removing dependencies on stuff in main/

	* arch/linux/Makefile.am, arch/linux/init.c,
	arch/linux/linuxnet.c, arch/linux/include/ukali.h,
	arch/ogl/Makefile.am, main/inferno.c: moved joy_init back to main,
	other header cleanups

	* arch/win32/ipx_win.c, configure.ac: ipx on win32 fixed!

2003-03-19  Martin Schaffner <maschaffner@gmx.ch>

	* 2d/rle.c, include/gr.h, include/rle.h, main/bm.c, main/bm.h,
	main/gamemine.c, main/gamemine.h, main/gameseq.c, main/piggy.c,
	main/piggy.h, main/wall.c, main/wall.h: if descent.pig available,
	load d1 textures for d1 levels
