@@ -1,4 +1,4 @@
-/* $Id: bm.h,v 1.8 2003-03-19 22:44:15 btb Exp $ */
+/* $Id: bm.h,v 1.9 2003-03-25 08:19:12 btb Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -100,6 +100,5 @@ extern void bm_read_all_d1(CFILE * fp);
 extern void undo_bm_read_all_d1(void);
 
 int load_exit_models();
-void free_exit_model_data();
 
 #endif /* _BM_H */
