@@ -1,3 +1,9 @@
+2003-03-25  Bradley Bell  <btb@icculus.org>
+
+	* main/bm.c, main/bm.h, main/endlevel.c, main/piggy.c,
+	main/piggy.h: ability to load exit model bitmaps (or any bitmap,
+	really) from d1 pig file
+
 2003-03-23  Bradley Bell  <btb@icculus.org>
 
 	* main/bm.c: stop extra robots from overwriting exit models
